2005-12-30 Perry
 PATCH: [ 1391732 ] Do not offer to unify codepages in UNICODE build
  Also introduces new error IDS_DIFFERENT_UNICODINGS and new
   global function IsUnicodeBuild.
  (Post-application)
  Doing language synchronizations for this patch.
  Src: Merge.rc
   Languages\Brazilian\MergeBrazilian.rc
   Languages\Bulgarian\MergeBulgarian.rc
   Languages\Catalan\MergeCatalan.rc
   Languages\ChineseSimplified\MergeChineseSimplified.rc
   Languages\ChineseTraditional\MergeChineseTraditional.rc
   Languages\Czech\MergeCzech.rc
   Languages\Danish\MergeDanish.rc
   Languages\Dutch\MergeDutch.rc
   Languages\German\MergeGerman.rc
   Languages\Hungarian\MergeHungarian.rc
   Languages\Italian\MergeItalian.rc
   Languages\Japanese\MergeJapanese.rc
   Languages\Korean\MergeKorean.rc
   Languages\Norwegian\MergeNorwegian.rc
   Languages\Polish\MergePolish.rc
   Languages\Russian\MergeRussian.rc
   Languages\Slovak\MergeSlovak.rc
   Languages\Spanish\MergeSpanish.rc
   Languages\Swedish\MergeSwedish.rc
   Languages\Turkish\MergeTurkish.rc
 PATCH: [ 1212368 ] Display correct paths in context patches
  (Post-application)
  Revising patched code, removing unneeded dispname added when patch applied
  Src: DiffWrapper.cpp
  diffutils\src: CONTEXT.C DIFF.H
 PATCH: [ 1393239 ] Split functions out of RunFileDiff
  Src: DiffWrapper.cpp DiffWrapper.h
 PATCH: [ 1392229 ] Fix Column item handling
  Src: DirView.h DirViewColHandler.cpp DirViewColItems.cpp
   DirViewColItems.h

2005-12-29 Perry
 PATCH: [ 1390774 ] Rename CRegOptions to CRegOptionsMgr
  Docs\Developers: Options.html
  Src\Common: OptionsMgr.cpp OptionsMgr.h
  Src: FileTransform.cpp MainFrm.cpp MainFrm.h SyntaxColors.cpp
   SyntaxColors.h codepage.h
 PATCH: [ 1392650 ] Fix locals of CDiffWrapper::RunFileDiff
  Src: DiffWrapper.cpp DiffWrapper.h MergeDoc.cpp PatchTool.cpp
 PATCH: [ 1392729 ] Cleanup variables in RunFileDiff
  Src: DiffWrapper.cpp